--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>Home</title>
+  
   <link rel="stylesheet" href="reset.css">
+
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Roboto" rel="stylesheet">
+
   <link rel="stylesheet" href="master.css">
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -54,8 +61,8 @@
     <section>
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-4 text-center font-weight-bold">Welcome to my Website</h1>
-          <p class="lead text-center">A place where you can learn about the new upcoming computor programmer, Max Iain Fyall!</p>
+          <h1 class="display-4 text-center font-weight-bold">WELCOME TO MY WEBSITE</h1>
+          <p class="lead text-center">A Place Where You Can Learn About The New Upcoming Computor Programmer, Mr Max Iain Fyall!</p>
         </div>
       </div>
     </section>
