--- a/Contact.html
+++ b/Contact.html
@@ -11,10 +11,8 @@
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Roboto" rel="stylesheet">
-
   <link rel="stylesheet" href="master.css">
-  
+
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -23,39 +21,40 @@
 
 <body>
   <header>
+    <section>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <div class="navbar-brand mb-0 h1">
-          <a class="navbar-brand">Mr Max Iain Fyall</a>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <div class="navbar-brand mb-0 h1">
+            <a class="navbar-brand">Mr Max Iain Fyall</a>
+          </div>
+
+
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="CV.html">My CV</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Projects.html">My Projects</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Contact.html">Contact Details</a>
+              </li>
+            </ul>
+          </div>
         </div>
 
+      </nav>
+    </section>
 
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="CV.html">My CV</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Projects.html">My Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Contact.html">Contact Details</a>
-            </li>
-          </ul>
-        </div>
-      </div>
 
-    </nav>
-  </header>
-
-  <main>
     <section>
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
@@ -64,6 +63,10 @@
         </div>
       </div>
     </section>
+
+  </header>
+
+  <main>
 
     <section>
       <div class="container bg-dark">
@@ -79,8 +82,8 @@
           </div>
         </div>
 
-<div class="row">
-  <div class="padding">
+        <div class="row">
+          <div class="padding">
 
             <h1 style="margin-bottom:25px; margin-top:25px;">Other Ways to Contact Me:</h1>
 
@@ -110,12 +113,12 @@
 
           <div class="col-md-auto">
 
-            <a href="https://www.facebook.com/"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;">
+            <a href="https://www.facebook.com/"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;"></a>
 
-              <a href="https://twitter.com/Twitter?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;">
+            <a href="https://twitter.com/Twitter?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;"></a>
 
-                <a href="https://accounts.snapchat.com/accounts/login?continue=https%3A%2F%2Faccounts.snapchat.com%2Faccounts%2Fwelcome"><img src="snapchat-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark"
-                    style="max-width: 50px; max-height: 50px;">
+            <a href="https://accounts.snapchat.com/accounts/login?continue=https%3A%2F%2Faccounts.snapchat.com%2Faccounts%2Fwelcome"><img src="snapchat-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark"
+                style="max-width: 50px; max-height: 50px;"></a>
 
           </div>
         </div>
