--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
 
 <head>
   <meta charset="utf-8">
+  <!-- Title of Page -->
   <title>Home</title>
-  
+
+  <!-- Link to css file to reset all css of base page -->
   <link rel="stylesheet" href="reset.css">
 
+  <!-- Responsive Meta Tag, implemented from bootstrap documentation -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <!-- Link to stylesheet for bootstrap framework, implemented from bootstrap documentation, all bootstrap documentation implemented has been edited to show what I want -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Roboto" rel="stylesheet">
-
+  <!-- Link to my css style sheet -->
   <link rel="stylesheet" href="master.css">
 
+  <!-- Bootstrap scripts to allow bootstrap elements to work, implemented from bootstrap documentation -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -22,44 +26,51 @@
 </head>
 
 <body>
+  <!-- Header and section tags used to make code more readable -->
   <header>
+    <section>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <div class="navbar-brand mb-0 h1">
-          <a class="navbar-brand">Mr Max Iain Fyall</a>
+      <!-- NavBar of Webpage implemented from bootstrap documentation, edited to suit my webpage-->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <div class="navbar-brand mb-0 h1">
+            <a class="navbar-brand">Mr Max Iain Fyall</a>
+          </div>
+
+
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <!-- Takes user to Homepage once Home is clicked in NavBar -->
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <!-- Takes user to CV page when My CV is clicked in NavBar -->
+                <a class="nav-link" href="CV.html">My CV</a>
+              </li>
+              <li class="nav-item">
+                <!-- Takes user to Projects Page when My Projects is clicked in NavBar-->
+                <a class="nav-link" href="Projects.html">My Projects</a>
+              </li>
+              <li class="nav-item">
+                <!-- Takes user to Contact Details page when clicked -->
+                <a class="nav-link" href="Contact.html">Contact Details</a>
+              </li>
+            </ul>
+          </div>
         </div>
 
-
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="CV.html">My CV</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Projects.html">My Projects</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Contact.html">Contact Details</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-
-    </nav>
-  </header>
-
-
-  <main>
+      </nav>
+    </section>
 
     <section>
+
+      <!-- jumbotron implemented from bootstrap documentation -->
       <div class="jumbotron jumbotron-fluid">
+        <!-- Container, row and column class implemented from bootstrap grid system documentation -->
         <div class="container">
           <h1 class="display-4 text-center font-weight-bold">WELCOME TO MY WEBSITE</h1>
           <p class="lead text-center">A Place Where You Can Learn About The New Upcoming Computor Programmer, Mr Max Iain Fyall!</p>
@@ -67,12 +78,22 @@
       </div>
     </section>
 
+    <!-- End of header -->
+  </header>
+
+  <!-- Main and section tags used to improve readablilty -->
+  <main>
+
     <section>
+      <!-- bg-dark used to give black darker barkground to certain elements -->
       <div class="container bg-dark">
         <div class="row">
+
+          <!-- Media  and media body class implemented from Bootstrap documentation -->
           <div class="media">
+            <!-- image style to be an appropriate size -->
             <img class="align-self-center mr-3" src="home picture.jpeg" alt="Generic placeholder image" style="max-width:300px;
-            max-height:300px;">
+            max-height:300px">
             <div class="media-body">
               <h3 class="mt-0" style="padding-top:20px;">About Me</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -88,12 +109,20 @@
     </section>
 
     <section>
+      <!-- hr tag to create line across webpage -->
       <hr class="my-4">
 
 
       <div class="container">
-        <blockquote class="blockquote text-center bg-#1BE7FF">
-          <p class="mb-0 font-weight-bold">Check out my Other Pages! There are links down bellow!</p>
+
+        <!-- blockquote implemented from bootstrap documentation -->
+
+        <blockquote class="blockquote text-center">
+          <!-- blackText class created to change color of text to black as rest of text has been set to white -->
+          <div class="blackText">
+            <a class="mb-0 font-weight-bold">Check out my Other Pages! There are links down bellow!</a>
+          </div>
+
         </blockquote>
       </div>
 
@@ -104,7 +133,10 @@
       <div class="container">
         <div class="row">
           <div class="col">
+            <!-- card template implemented from bootstrap documentation -->
+            <!-- 1st Card -->
             <div class="card bg-light" style="width: 18rem;">
+              <!-- Random image generated each time webpage is loaded -->
               <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
               <div class="card-body bg-dark ml-auto">
                 <h5 class="card-title">My Projects</h5>
@@ -112,11 +144,16 @@
                   aliquip ex ea
                   commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                   laborum..</p>
-                <a href="Projects.html" class="btn btn-primary">Take Me There!</a>
+                  <!-- font class create to change font and color of button -->
+                <div class="font">
+                  <!-- Button takes user to advertised webpage -->
+                  <a href="Projects.html" class="btn btn-primary">Take Me There!</a>
+                </div>
               </div>
             </div>
           </div>
 
+          <!-- 2nd Card -->
           <div class="col">
             <div class="card bg-light" style="width: 18rem;">
               <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
@@ -126,11 +163,15 @@
                   aliquip ex ea
                   commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                   laborum.</p>
-                <a href="CV.html" class="btn btn-primary">Take Me There!</a>
+
+                <div class="font">
+                  <a href="CV.html" class="btn btn-primary">Take Me There!</a>
+                </div>
               </div>
             </div>
           </div>
 
+          <!-- 3rd Card -->
           <div class="col">
             <div class="card bg-light" style="width: 18rem;">
               <img class="card-img-top" src="https://picsum.photos/500/600/?random" alt="Card image cap">
@@ -140,7 +181,11 @@
                   aliquip ex ea
                   commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
                   laborum.</p>
-                <a href="Contact.html" class="btn btn-primary">Take Me There!</a>
+                <div class="font">
+
+                  <a href="Contact.html" class="btn btn-primary">Take Me There!</a>
+                </div>
+
               </div>
             </div>
           </div>
@@ -150,14 +195,18 @@
       <hr class="my-4">
     </section>
 
+    <!-- End of main section -->
   </main>
 
-
+  <!-- Start of footer -->
   <footer>
 
+    <!-- Space class created to push footer up from bottom of page -->
     <div class="space">
       <div class="container">
         <div class="row">
+          
+          <!-- Footer contains links to my social media pages -->
           <div class="navbar-brand col mb-0 h3" style="padding-top:10px;">
             <a>Follow me on Social Media</a>
           </div>
@@ -165,12 +214,12 @@
 
           <div class="col-md-auto">
 
-            <a href="https://www.facebook.com/"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;">
+            <a href="https://www.facebook.com/"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;"></a>
 
-              <a href="https://twitter.com/Twitter?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;">
+            <a href="https://twitter.com/Twitter?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;"></a>
 
-                <a href="https://accounts.snapchat.com/accounts/login?continue=https%3A%2F%2Faccounts.snapchat.com%2Faccounts%2Fwelcome"><img src="snapchat-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark"
-                    style="max-width: 50px; max-height: 50px;">
+            <a href="https://accounts.snapchat.com/accounts/login?continue=https%3A%2F%2Faccounts.snapchat.com%2Faccounts%2Fwelcome"><img src="snapchat-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark"
+                style="max-width: 50px; max-height: 50px;"></a>
 
           </div>
         </div>
