Finished commenting code. Still need to add media queries for index, projects and CV.

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
           </div>
         </div>
 
+        <!-- End of NavBar -->
       </nav>
     </section>
 
@@ -205,7 +206,7 @@
     <div class="space">
       <div class="container">
         <div class="row">
-          
+
           <!-- Footer contains links to my social media pages -->
           <div class="navbar-brand col mb-0 h3" style="padding-top:10px;">
             <a>Follow me on Social Media</a>
@@ -214,8 +215,10 @@
 
           <div class="col-md-auto">
 
+            <!-- Temporary links have been put in place just to show the links work -->
             <a href="https://www.facebook.com/"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;"></a>
 
+            <!-- I don't have accounts for some social networks like twitter, However I implemented it just to show I can implement link to a twitter page if i needed to-->
             <a href="https://twitter.com/Twitter?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;"></a>
 
             <a href="https://accounts.snapchat.com/accounts/login?continue=https%3A%2F%2Faccounts.snapchat.com%2Faccounts%2Fwelcome"><img src="snapchat-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark"
@@ -226,6 +229,7 @@
       </div>
     </div>
 
+    <!-- End of footer -->
   </footer>
 </body>
 
