--- a/Contact.html
+++ b/Contact.html
@@ -3,16 +3,22 @@
 
 <head>
   <meta charset="utf-8">
+  <!-- Title of page -->
   <title>Contact Information</title>
 
+  <!-- Link to css file to reset all css of base page -->
   <link rel="stylesheet" href="reset.css">
 
+  <!-- Responsive Meta Tag, implemented from bootstrap documentation -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <!-- Link to stylesheet for bootstrap framework, implemented from bootstrap documentation, all bootstrap documentation implemented has been edited to show what I want -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+  <!-- Link to my css style sheet -->
   <link rel="stylesheet" href="master.css">
 
+  <!-- Bootstrap scripts to allow bootstrap elements to work, implemented from bootstrap documentation -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -20,9 +26,11 @@
 </head>
 
 <body>
+  <!-- Header and section tags used to make code more readable -->
   <header>
-    <section>
 
+    <!-- NavBar of Webpage implemented from bootstrap documentation, edited to suit my webpage-->
+    <section>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
           <div class="navbar-brand mb-0 h1">
@@ -36,44 +44,59 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
+                <!-- Takes user to Homepage once Home is clicked in NavBar -->
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
+                <!-- Takes user to CV page when My CV is clicked in NavBar -->
                 <a class="nav-link" href="CV.html">My CV</a>
               </li>
               <li class="nav-item">
+                <!-- Takes user to Projects Page when My Projects is clicked in NavBar-->
                 <a class="nav-link" href="Projects.html">My Projects</a>
               </li>
               <li class="nav-item">
+                <!-- Takes user to Contact Details page when clicked -->
                 <a class="nav-link" href="Contact.html">Contact Details</a>
               </li>
             </ul>
           </div>
         </div>
 
+        <!-- End of NavBar -->
       </nav>
     </section>
 
-
     <section>
+
+      <!-- jumbotron implemented from bootstrap documentation -->
       <div class="jumbotron jumbotron-fluid">
+        <!-- Container, row and column class implemented from bootstrap grid system documentation -->
         <div class="container">
-          <h1 class="display-4 text-center font-weight-bold">WELCOME TO THE CONTACT DETAILS PAGE</h1>
-          <p class="lead text-white text-center">The Page To Show You How To Get in Touch With Me</p>
+          <h1 class="display-4 text-center font-weight-bold">WELCOME TO MY PROJECTS PAGE</h1>
+          <p class="lead text-center">This Page Contains Details Of All The Projects I Have Created Over The Years As A Computor Programmer</p>
         </div>
       </div>
     </section>
 
+    <!-- End of header -->
   </header>
 
+  <!-- Main and section tags used to improve readablilty -->
   <main>
 
+    <!-- 1st Section of Main -->
     <section>
+
+      <!-- bg-dark used to give black darker barkground to certain elements -->
       <div class="container bg-dark">
         <div class="row">
+
+          <!-- Padding class, creates space to make page more appealing -->
           <div class="padding">
             <h1 style="margin-bottom:25px;">Contact Me Directly:</h1>
 
+            <!-- List group used for better organisation of grades, implemented from bootstrap documentation -->
             <ul class="list-group">
               <li class="list-group-item text-dark">Phone Number: 123456789</li>
               <li class="list-group-item text-dark">Email: max.fyall@hotmail.co.uk</li>
@@ -81,7 +104,15 @@
             </ul>
           </div>
         </div>
+      </div>
 
+<!-- End of 1st Section -->
+      </section>
+
+<!-- 2nd Section of main -->
+      <section>
+
+        <div class="container bg-dark">
         <div class="row">
           <div class="padding">
 
@@ -97,15 +128,19 @@
         </div>
       </div>
 
+<!-- End od 2nd Section -->
     </section>
 
-
+<!-- End of Main Section-->
   </main>
 
+  <!-- Start of footer -->
   <footer>
+    <!-- Space class created to push footer up from bottom of page -->
     <div class="space">
       <div class="container">
         <div class="row">
+          <!-- Footer contains links to my social media pages -->
           <div class="navbar-brand col mb-0 h3" style="padding-top:10px;">
 
             <a>Follow me on Social Media</a>
@@ -113,8 +148,10 @@
 
           <div class="col-md-auto">
 
+            <!-- Temporary links have been put in place just to show the links work -->
             <a href="https://www.facebook.com/"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;"></a>
 
+            <!-- I don't have accounts for some social networks like twitter, However I implemented it just to show I can implement link to a twitter page if i needed to-->
             <a href="https://twitter.com/Twitter?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;"></a>
 
             <a href="https://accounts.snapchat.com/accounts/login?continue=https%3A%2F%2Faccounts.snapchat.com%2Faccounts%2Fwelcome"><img src="snapchat-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark"
@@ -124,7 +161,9 @@
         </div>
       </div>
     </div>
+    <!-- End of footer -->
   </footer>
+  
 </body>
 
 </html>
