--- a/Projects.html
+++ b/Projects.html
@@ -3,16 +3,22 @@
 
 <head>
   <meta charset="utf-8">
+  <!-- Title of Page -->
   <title>Projects</title>
 
+  <!-- Link to css file to reset all css of base page -->
   <link rel="stylesheet" href="reset.css">
 
+  <!-- Responsive Meta Tag, implemented from bootstrap documentation -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <!-- Link to stylesheet for bootstrap framework, implemented from bootstrap documentation, all bootstrap documentation implemented has been edited to show what I want -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+  <!-- Link to my css style sheet -->
   <link rel="stylesheet" href="master.css">
 
+  <!-- Bootstrap scripts to allow bootstrap elements to work, implemented from bootstrap documentation -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -20,8 +26,10 @@
 </head>
 
 <body>
-
+  <!-- Header and section tags used to make code more readable -->
   <header>
+
+    <!-- NavBar of Webpage implemented from bootstrap documentation, edited to suit my webpage-->
     <section>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
@@ -36,26 +44,34 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
+                <!-- Takes user to Homepage once Home is clicked in NavBar -->
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
+                <!-- Takes user to CV page when My CV is clicked in NavBar -->
                 <a class="nav-link" href="CV.html">My CV</a>
               </li>
               <li class="nav-item">
+                <!-- Takes user to Projects Page when My Projects is clicked in NavBar-->
                 <a class="nav-link" href="Projects.html">My Projects</a>
               </li>
               <li class="nav-item">
+                <!-- Takes user to Contact Details page when clicked -->
                 <a class="nav-link" href="Contact.html">Contact Details</a>
               </li>
             </ul>
           </div>
         </div>
 
+        <!-- End of NavBar -->
       </nav>
     </section>
 
     <section>
+
+      <!-- jumbotron implemented from bootstrap documentation -->
       <div class="jumbotron jumbotron-fluid">
+        <!-- Container, row and column class implemented from bootstrap grid system documentation -->
         <div class="container">
           <h1 class="display-4 text-center font-weight-bold">WELCOME TO MY PROJECTS PAGE</h1>
           <p class="lead text-center">This Page Contains Details Of All The Projects I Have Created Over The Years As A Computor Programmer</p>
@@ -63,15 +79,22 @@
       </div>
     </section>
 
+    <!-- End of header -->
   </header>
 
+  <!-- Main and section tags used to improve readablilty -->
   <main>
 
+    <!-- 1st Section of Main -->
     <section>
 
+      <!-- bg-dark used to give black darker barkground to certain elements -->
       <div class="container bg-dark" style="padding-bottom:10px;">
+
+        <!-- Padding class, creates space to make page more appealing -->
         <div class="padding">
 
+          <!-- Media class and media body implemented from Bootstrap documentation -->
           <div class="media">
             <img class="mr-3" src="https://picsum.photos/500/600/?random" alt="Generic placeholder image" style="max-height:250px; max-width:300px">
             <div class="media-body">
@@ -83,11 +106,13 @@
             </div>
           </div>
 
+          <!-- Collapsable content, implemented from bootstrap documentation-->
           <p>
             <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false" aria-controls="collapseExample1">
               Click to Learn More
             </a>
 
+            <!-- Content inside collapsed box -->
           </p>
           <div class="collapse" id="collapseExample1">
             <div class="card card-body bg-dark">
@@ -100,8 +125,10 @@
         </div>
       </div>
 
+<!-- End of 1st section -->
     </section>
 
+    <!-- 2nd Section of Main -->
     <section>
 
 
@@ -134,8 +161,10 @@
         </div>
       </div>
 
+<!-- End of 2nd section -->
     </section>
 
+<!-- 3rd Section of Main -->
     <section>
 
       <div class="container bg-dark" style="margin-top:25px; padding-bottom:10px;">
@@ -169,30 +198,39 @@
         </div>
       </div>
 
+      <!-- End of 3rd Section -->
     </section>
 
     <section>
+
+      <!-- hr tag to create line across webpage -->
       <hr class="my-4">
 
 
       <div class="container">
+
+        <!-- blockquote implemented from bootstrap documentation -->
         <blockquote class="blockquote text-center">
           <div class="blackText">
             <a class="mb-0 font-weight-bold">Any recent projects will be added to this page so be sure to return to see my latest projects</a>
           </div>
-
         </blockquote>
+
       </div>
 
       <hr class="my-4">
     </section>
 
+<!-- End of Main Section -->
   </main>
 
+  <!-- Start of footer -->
   <footer>
+    <!-- Space class created to push footer up from bottom of page -->
     <div class="space">
       <div class="container">
         <div class="row">
+          <!-- Footer contains links to my social media pages -->
           <div class="navbar-brand col mb-0 h3" style="padding-top:10px;">
 
             <a>Follow me on Social Media</a>
@@ -200,8 +238,10 @@
 
           <div class="col-md-auto">
 
+            <!-- Temporary links have been put in place just to show the links work -->
             <a href="https://www.facebook.com/"><img src="facebook-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;"></a>
 
+            <!-- I don't have accounts for some social networks like twitter, However I implemented it just to show I can implement link to a twitter page if i needed to-->
             <a href="https://twitter.com/Twitter?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="twitter-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark" style="max-width: 50px; max-height: 50px;"></a>
 
             <a href="https://accounts.snapchat.com/accounts/login?continue=https%3A%2F%2Faccounts.snapchat.com%2Faccounts%2Fwelcome"><img src="snapchat-square-brands.jpg" alt="https://picsum.photos/500/600/?random" class="img-thumbnail bg-dark"
@@ -211,6 +251,7 @@
         </div>
       </div>
     </div>
+    <!-- End of footer -->
   </footer>
 
 </body>
